Closed
Bug 20619
Opened 25 years ago
Closed 25 years ago
[PERFLOG]: Log file generated by viewer is not correct.
Categories
(Core Graveyard :: Viewer App, defect, P3)
Tracking
(Not tracked)
RESOLVED
FIXED
M14
People
(Reporter: bsharma, Assigned: nisheeth_mozilla)
References
Details
(Keywords: perf, Whiteboard: [PERF] fix in hand. need to discuss output with bindu)
Viewer Build: 1999-11-23-13-M12
The log file that is generated when Viewer App sometimes shows the timing
information more than one time for a given url.
Also, the log file output is not correctly formatted.
Attached is the log file for http://www.aol.com site.
Going to create the event queue
*** Timing layout processes on url: 'resource:///res/samples/test0.html',
webshell: 003D6E20
Content creation time (this=013DD180): Real time 0:0:0, CP time 0.050
Reflow time (this=013FC890): Real time 0:0:0, CP time 0.110
Frame construction plus style resolution time (this=013FC890): Real time 0:0:0,
CP time 0.090
Style resolution time (this=013FC890): Real time 0:0:0, CP time 0.100
Parse Time (this=013DD390): Real time 0:0:0, CP time 0.030
DTD Time: Real time 0:0:0, CP time 0.020
Tokenize Time: Real time 0:0:0, CP time 0.010
Total (Layout + Page Load) Time (webshell=003D6E20): Real time 0:0:0, CP time
0.671
*** Timing layout processes on url: 'http://www.aol.com/', webshell: 003D6E20
Total (Layout + Page Load) Time (webshell=0143F180): Real time 0:0:0, CP time
0.070
is: 0 0
is: 0 0
is: 0 0
is: 900 360
is: 900 360
is: 0 0
is: 0 0
is: 0 0
is: 990 360
is: 990 360
is: 0 0
is: 0 0
is: 0 0
is: 450 360
is: 0 0
is: 0 0
Content creation time (this=0199F490): Real time 0:0:0, CP time 0.090
Reflow time (this=01998ED0): Real time 0:0:0, CP time 0.571
Frame construction plus style resolution time (this=01998ED0): Real time 0:0:0,
CP time 0.411
Style resolution time (this=01998ED0): Real time 0:0:0, CP time 0.280
Parse Time (this=0199F6A0): Real time 0:0:0, CP time 0.080
DTD Time: Real time 0:0:0, CP time 0.320
Tokenize Time: Real time 0:0:0, CP time 0.020
Total (Layout + Page Load) Time (webshell=003D6E20): Real time 0:0:4, CP time
1.783
*** Timing layout processes on url: 'http://www.aol.com/', webshell: 019BBAE0
Total (Layout + Page Load) Time (webshell=019BBAE0): Real time 0:0:0, CP time
0.010
*** Timing layout processes on url: 'http://www.aol.com/popups/aol_4.html',
webshell: 019BBAE0
Error: Can't load: http://www.aol.com/ (804b0002)
Content creation time (this=020C2170): Real time 0:0:0, CP time 0.000
Reflow time (this=020C32B0): Real time 0:0:0, CP time 0.000
Frame construction plus style resolution time (this=020C32B0): Real time 0:0:0,
CP time 0.030
Style resolution time (this=020C32B0): Real time 0:0:0, CP time 0.030
Parse Time (this=020C2320): Real time 0:0:0, CP time 0.000
DTD Time: Real time 0:0:0, CP time 0.000
Tokenize Time: Real time 0:0:0, CP time 0.000
Total (Layout + Page Load) Time (webshell=019BBAE0): Real time 0:0:0, CP time
0.140
Going to destroy the event queue
Assignee | ||
Updated•25 years ago
|
Status: NEW → ASSIGNED
Target Milestone: M13
Assignee | ||
Comment 1•25 years ago
|
||
Accepting bug and setting milestone to M13...
Bulk add of "perf" to new keyword field. This will replace the [PERF] we were
using in the Status Summary field.
Assignee | ||
Updated•25 years ago
|
Target Milestone: M13 → M14
Assignee | ||
Comment 4•25 years ago
|
||
Moving the last two M13 bugs to M14 because they aren't M13 show stoppers.
Assignee | ||
Comment 5•25 years ago
|
||
With my fixes, viewer's output looks like this:
*** Timing layout processes on url: 'http://www.aol.com/', webshell: 015CA3F0
WEBSHELL+ = 2
Total (Layout + Page Load) Time (webshell=02A98DD0): Real time 0:0:0, CP time 0.
110
Null found at buffer[1025] provided by netlib...
###!!! ASSERTION: possible embedded null in append(PRUnichar*): 'kNotFound==len'
, file z:\mozilla\xpcom\ds\nsString2.cpp, line 1161
Content creation time (this=01F6D930): Real time 0:0:0, CP time 0.670
Reflow time (this=01F61BB0): Real time 0:0:0, CP time 0.620
Frame construction plus style resolution time (this=01F61BB0): Real time 0:0:1,
CP time 1.030
Style resolution time (this=01F61BB0): Real time 0:0:0, CP time 0.890
Parse Time (this=01F6D1C0): Real time 0:0:0, CP time 0.760
DTD Time: Real time 0:0:3, CP time 3.770
Tokenize Time: Real time 0:0:0, CP time 0.000
Total (Layout + Page Load) Time (webshell=015CA3F0): Real time 0:0:41, CP time 4
1.420
Bindu, will this output be OK for your perl script?
Assignee | ||
Updated•25 years ago
|
Whiteboard: [PERF] → [PERF] fix in hand. need to discuss output with bindu
Assignee | ||
Comment 6•25 years ago
|
||
I've checked in my changes. The start of the AOL page load is not output twice
any more. Marking this bug fixed.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Updated•16 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•