Fix for bug 20619.  This affects only those builds which were built with MOZ_PERF set in the environment.  The start of the url load is no longer output twice on the console.